k8s-templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: server
  template:
    metadata:
      labels: 
        component: server
    spec:
      containers:
        - name: server
          image: knsakib/express-api-server
          ports: 
            - containerPort: 5000
